Restructure project